# rush-gift-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  vercel.json
data/: README.md  gifts.json  places.json  stores.json
docs/: architecture.md  demo-scenarios.md  deployment.md  implementation-roadmap.md  kakaocloud-deploy.md  playmcp-submission.md  provider-replacement.md
rush_gift/: __init__.py  config.py  geo.py  models.py  scoring.py  services.py
rush_gift/providers/: __init__.py  base.py  fixture.py  kakao.py  tmap.py
scripts/: check_kakao.py  check_tmap.py
tests/: README.md  conftest.py  test_config.py  test_mcp_tools.py  test_services.py  test_tmap_provider.py  test_tmap_store_provider.py
